$Id$

2004-02-22 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * This sweet application is a XMMS2 frontend now

2004-02-15 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/interface.c, src/playlist_item.[ch], src/plugin.h,
          src/input/vorbis/vorbis.c: added bitrate and sample rate
          parts

2004-02-03 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/playlist.c, src/playlist_item.c, src/callbacks.c:
          The UI parts and playlist are now correctly re-initialized
          after a group switch

2004-02-01 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/eplayer.c, src/interface.c, src/playlist.c,
          src/playlist_item.c: Each PlayListItem object now
          has its own Edje object
        * data/README, src/eplayer.c: Added two signals,
          PLAYBACK_STARTED and PLAYBACK_STOPPED
        * src/callbacks.c: The playlist marker now always follows
          the track that's being played

2004-01-24 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/eplayer.c, src/plugin.c: Switched to libltdl
        * src/interface.c: added draggie support, removed the RAISE
          signal.

2003-12-28 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/callbacks.c, src/playlist.c, src/interface.c,
          data/README: Added PLAYLIST_ITEM_REMOVE (thanks to atmos).

2003-12-07 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/output/alsa/alsa.c: make sure changes made to the
          mixer levels w/ other applications (like alsamixer) are
          reflected in eplayer
        * src/eplayer.c, src/track.c, src/interface.c:
          update the track info parts etc on group switch
        * src/interface.c, src/callbacks.[ch], data/README:
          added STOP signal

2003-12-04 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/eplayer.c: eplayer.db lives in ~/.e/apps/eplayer now
        * data/themes/default/default.edc: Added repeat mode toggle
          button
