@@ -1,3 +1,3 @@
 Makefile
 Makefile.in
-eplayer.db
+euphoria.db
